--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.24.2",
     "csv-parser": "^3.2.0",
     "dayjs": "^1.11.13",
+    "luxon": "^3.5.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/antd": "^1.0.4",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
