--- a/package.json
+++ b/package.json
@@ -18,18 +18,24 @@
     "@supabase/supabase-js": "^2.48.1",
     "amadeus": "^11.0.0",
     "antd": "^5.24.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "csv-parser": "^3.2.0",
     "dayjs": "^1.11.13",
+    "ioredis": "^5.5.0",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/antd": "^1.0.4",
+    "@types/ioredis": "^5.0.0",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^19",
